Switch to new fast zipfile reader; huge refactoring and cleanup